# RPi-picture-frame

./: .gitignore  .gitmodules  README.md
downloader/: README.md  downloader.py
proxy/: README.md  proxy.py
slideshow/: .env  CMakeLists.txt  README.md  SDL_GL_window.cpp  SDL_GL_window.h  gpio_led.cpp  gpio_led.h  load_image.cpp  load_image.h  loader_mmal.cpp  loader_stb.cpp  loader_turbojpeg.cpp  loader_v4l2.cpp  main.cpp  slideshow
slideshow2/: CMakeLists.txt  drm.c  drm.h  drm_util.cpp  drm_util.h  egl_util.cpp  egl_util.h  gbm_util.cpp  gbm_util.h  gl_util.cpp  gl_util.h  load_image.cpp  load_image.h  loader_turbojpeg.cpp  main.cpp
systemd/: downloader.service  proxy.service  slideshow.service
